Completed s9 mongoose - added .env

--- a/s9_mongoose/package.json
+++ b/s9_mongoose/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "mongoose": "^7.0.4"
   },
   "devDependencies": {
